--- a/pages/family.html
+++ b/pages/family.html
@@ -75,25 +75,12 @@
                             <button class="Header_headerLinkArrowButton " aria-describedby="popup-1">
                                 <div class="Header_headerLinkArrow">
                                     <a id="17" href="./about.html">о фонде</a>
-                                    <svg
-                                        xmlns="http://www.w3.org/2000/svg" 
-                                        width="16" 
-                                        height="11" 
-                                        fill="none" 
-                                        viewBox="0 0 16 11">
-                                        <path 
-                                            d="M1 1L8 9L15 1" 
-                                            stroke="var(--text-black)" 
-                                            stroke-width="2" 
-                                            stroke-linecap="round"
-                                            stroke-linejoin="round">
-                                        </path>
-                                    </svg>
+
                                 </div>
                                  <div class="popup-root" style="position: absolute; pointer-events: auto;width: 100px; height: 15px">
                                      <div class="popup-content " role="tooltip" id="popup-16">
                                          <div
-                                             style="height: 8px; width: 16px; position: absolute; background: transparent; color: rgb(255, 255, 255); z-index: -1; transform: rotate(0deg) translateY(-100%) translateX(-50%); top: 0; left: 50%">
+                                            class="AboutSubmenu_arrow">
                                              <svg data-testid="arrow" class="popup-arrow " viewBox="0 0 32 16" style="position: absolute;">
                                                  <path d="M16 0l16 16H0z" fill="currentcolor"></path>
                                              </svg></div>
@@ -111,14 +98,14 @@
                                      </div>
                                  </div>
                             </button>
-                            <a class="Header_headerLink " id="2" href="./news-and-reports.html">новости</a>
+                            <a class="Header_headerLink " id="2" href="./news-and-reports.html">деятельность</a>
                             <a class="Header_headerLink " id="3" href="./volunteer.html">волонтёрам</a>
                             <a class="Header_headerLink " id="4" href="./giver.html">дарителям</a>
                             <a class="Header_headerLink Header_active" id="6" href="./family.html">семьям</a>
                             <a class="Header_headerLink " id="35" href="./families/families.html">Акция</a>
-                            <a class="Header_headerLink " id="39" href="./contacts.html">Контакты</a>
-                            <a class="Header_headerLink " id="36" href="./feedback/reports.html">Отчёты и отзывы</a>
-                            <a class="Header_headerLink " id="41" href="./donate.html">Помочь</a>
+                            
+                            <a class="Header_headerLink " id="41" href="./donate.html">Помочь</a><a class="Header_headerLink " id="36" href="./feedback/reports.html">Отчёты и отзывы</a>
+
                         </div>
                         <div class="Header_headerButtons">
                             <div class="Header_notificationButton">
@@ -184,7 +171,7 @@
         </div>
         <div class="Mobile_root">
             <div class="Mobile_links"><a class="Mobile_link " id="17" href="./about.html">о фонде</a><a
-                    class="Mobile_link " id="2" href="./news-and-reports.html">новости</a><a class="Mobile_link " id="3"
+                    class="Mobile_link " id="2" href="./news-and-reports.html">деятельность</a><a class="Mobile_link " id="3"
                     href="./volunteer.html">волонтёрам</a><a class="Mobile_link " id="4"
                     href="./giver.html">дарителям</a><a class="Mobile_link Mobile_active" id="6" href="./family.html">семьям</a><a
                     class="Mobile_link" id="35" href="./families/families.html">Акция</a><a
