--- a/pages/main.html
+++ b/pages/main.html
@@ -165,27 +165,14 @@
                         </div>
                         <div class="Header_links">
                             <button class="Header_headerLinkArrowButton" aria-describedby="popup-1">
-                                <div class="Header_headerLinkArrow">
+                                <div class="Header_headerLinkArrow ">
                                     <a id="17" href="./about.html">о фонде</a>
-                                    <svg
-                                        xmlns="http://www.w3.org/2000/svg" 
-                                        width="16" 
-                                        height="11" 
-                                        fill="none" 
-                                        viewBox="0 0 16 11">
-                                        <path 
-                                            d="M1 1L8 9L15 1" 
-                                            stroke="var(--text-black)" 
-                                            stroke-width="2" 
-                                            stroke-linecap="round"
-                                            stroke-linejoin="round">
-                                        </path>
-                                    </svg>
+
                                 </div>
                                  <div class="popup-root" style="position: absolute; pointer-events: auto;width: 100px; height: 15px">
                                      <div class="popup-content " role="tooltip" id="popup-16">
                                          <div
-                                             style="height: 8px; width: 16px; position: absolute; background: transparent; color: rgb(255, 255, 255); z-index: -1; transform: rotate(0deg) translateY(-100%) translateX(-50%); top: 0; left: 50%">
+                                           class="AboutSubmenu_arrow" >
                                              <svg data-testid="arrow" class="popup-arrow " viewBox="0 0 32 16" style="position: absolute;">
                                                  <path d="M16 0l16 16H0z" fill="currentcolor"></path>
                                              </svg></div>
@@ -203,14 +190,14 @@
                                      </div>
                                  </div>
                             </button>
-                            <a class="Header_headerLink " id="2" href="./news-and-reports.html">новости</a>
+                            <a class="Header_headerLink " id="2" href="./news-and-reports.html">деятельность</a>
                             <a class="Header_headerLink " id="3" href="./volunteer.html">волонтёрам</a>
                             <a class="Header_headerLink " id="4" href="./giver.html">дарителям</a>
                             <a class="Header_headerLink " id="6" href="./family.html">семьям</a>
                             <a class="Header_headerLink " id="35" href="./families/families.html">Акция</a>
-                            <a class="Header_headerLink " id="39" href="./contacts.html">Контакты</a>
-                            <a class="Header_headerLink " id="36" href="./feedback/reports.html">Отчёты и отзывы</a>
-                            <a class="Header_headerLink " id="41" href="./donate.html">Помочь</a>
+                            
+                            <a class="Header_headerLink " id="41" href="./donate.html">Помочь</a><a class="Header_headerLink " id="36" href="./feedback/reports.html">Отчёты и отзывы</a>
+
                         </div>
                         <div class="Header_headerButtons">
                             <div class="Header_notificationButton">
@@ -277,7 +264,7 @@
         <div class="Mobile_root ">
             <div class="Mobile_links">
                 <a class="Mobile_link " id="17" href="./about.html">о фонде</a>
-                <a class="Mobile_link " id="2" href="./news-and-reports.html">новости</a>
+                <a class="Mobile_link " id="2" href="./news-and-reports.html">деятельность</a>
                 <a class="Mobile_link " id="3" href="./volunteer.html">волонтёрам</a>
                 <a class="Mobile_link " id="4" href="./giver.html">дарителям</a>
                 <a class="Mobile_link " id="6" href="./family.html">семьям</a>
@@ -1215,8 +1202,7 @@
                     <div class data-tab="friends">
                         <div class="Carousel_carouselRoot " style="max-width: 1600px; margin: 64px auto 0px;">
                             <button
-                                class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile double-prev"
-                                style="position: absolute; z-index: 999; top: 50%; left: 0px; transform: translateY(-50%);"><svg
+                                class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-prev"><svg
                                     xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none"
                                     viewBox="0 0 40 40" class="Generic_clrIcon">
                                     <path fill="var(--primary)" class="Generic_iconPath"
@@ -1224,9 +1210,8 @@
                                     </path>
                                 </svg>
                             </button>
-                            <div class="double-slider" dir="ltr">
-                                <div data-index="0" class="slider-item" tabindex="-1"
-                                    aria-hidden="false" style="outline: none; width: 400px">
+                            <div class="multi-slider" dir="ltr">
+                                <div data-index="0" class="slider-item" >
                                     <div>
                                         <div class="Friend_friendRoot Friend_second"><img
                                                 src="https://storage.yandexcloud.net/pp-prod/person_201_c022319e9b.webp"
@@ -1239,8 +1224,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div data-index="1" class="slider-item" tabindex="-1" aria-hidden="false"
-                                    style="outline: none; width: 400px">
+                                <div data-index="1" class="slider-item">
                                     <div>
                                         <div class="Friend_friendRoot "><img
                                                 src="https://storage.yandexcloud.net/pp-prod/Mask_Group_4_2_14b3960860.webp"
@@ -1254,8 +1238,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div data-index="2" class="slider-item" tabindex="-1" aria-hidden="false"
-                                    style="outline: none; width: 400px">
+                                <div data-index="2" class="slider-item" >
                                     <div>
                                         <div class="Friend_friendRoot Friend_second"><img
                                                 src="https://storage.yandexcloud.net/pp-prod/Mask_Group_18_57a36cf274.webp"
@@ -1268,8 +1251,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div data-index="3" class="slider-item" tabindex="-1" aria-hidden="true"
-                                    style="outline: none; width: 400px">
+                                <div data-index="3" class="slider-item">
                                     <div>
                                         <div class="Friend_friendRoot Friend_last"><img
                                                 src="https://storage.yandexcloud.net/pp-prod/Mask_Group_19_1d33b1fb35.webp"
@@ -1282,8 +1264,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div data-index="4" class="slider-item" tabindex="-1" aria-hidden="true"
-                                    style="outline: none; width: 400px">
+                                <div data-index="4" class="slider-item" >
                                     <div>
                                         <div class="Friend_friendRoot Friend_second"><img
                                                 src="https://storage.yandexcloud.net/pp-prod/Vinokurova_Natalya_1_removebg_08bfa0f827.webp"
@@ -1298,8 +1279,7 @@
                                 </div>
                             </div>
                             <button
-                                    class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile double-next"
-                                    style="position: absolute; z-index: 999; top: 50%; right: 0px; transform: translateY(-50%);"><svg
+                                    class=" Generic_iconRoot Generic_white Generic_medium Carousel_hideOnMobile multi-next"><svg
                                         xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none"
                                         viewBox="0 0 40 40" class="Generic_clrIcon">
                                         <path fill="var(--primary)" class="Generic_iconPath"
@@ -1349,7 +1329,7 @@
                             style="display:flex;margin-top:40px" href="./donate.html">помочь</a>
                     </div>
                 </section>
-                <section class="IndexPage_section" id="media-reviews">
+                <section class="IndexPage_section media-reviews" id="media-reviews">
                     <h1>СМИ о нас</h1>
                     <div class="Carousel_carouselRoot " style="margin: 64px auto 56px;">
                         <button
