--- a/pages/main.html
+++ b/pages/main.html
@@ -1160,26 +1160,39 @@
                                 style="width:calc(100% / 3)">спецпредложения</button></div>
                     </div>
                     <div class="IndexPage_hideOnDesktop" style="margin:40px auto 0 auto;max-width:90%">
-                        <div>
-                            <div class="react-select-container-red css-2b097c-container"><span aria-live="polite"
-                                    aria-atomic="false" aria-relevant="additions text" class="css-7pg0cj-a11yText"></span>
-                                <div class="react-select-red__control css-yk16xz-control">
-                                    <div class="react-select-red__value-container css-1hwfws3">
-                                        <div class="react-select-red__placeholder css-1wa3eu0-placeholder">партнеры</div><input
-                                            id="react-select-2-input" readonly="" tabindex="0" aria-autocomplete="list"
-                                            class="css-62g3xt-dummyInput" value="">
-                                    </div>
-                                    <div class="react-select-red__indicators css-1wy0on6"><span
-                                            class="react-select-red__indicator-separator css-1okebmr-indicatorSeparator"></span><svg
-                                            xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none"
-                                            viewBox="0 0 40 40">
-                                            <path fill="var(--white)"
-                                                d="M21.75 18.333H6.583c-.874 0-1.583.71-1.583 1.584v.166c0 .875.709 1.584 1.583 1.584H21.75c.874 0 1.583-.71 1.583-1.584v-.166c0-.875-.709-1.584-1.583-1.584zM26.75 26.667H6.583C5.71 26.667 5 27.376 5 28.25v.167C5 29.29 5.709 30 6.583 30H26.75c.874 0 1.583-.709 1.583-1.583v-.167c0-.874-.709-1.583-1.583-1.583zM33.417 10H6.583C5.71 10 5 10.709 5 11.583v.167c0 .874.709 1.583 1.583 1.583h26.834c.874 0 1.583-.709 1.583-1.583v-.167C35 10.71 34.291 10 33.417 10z">
-                                            </path>
-                                        </svg></div>
+                    <div>
+                        <div class="Tabs_tabRoot Tabs_tabRoot_red react-select-container-red css-2b097c-container"><span aria-live="polite" aria-atomic="false"
+                                aria-relevant="additions text" class="css-7pg0cj-a11yText"><span id="aria-selection"></span><span
+                                    id="aria-context">option партнеры focused, 1 of 3. 3 results available. Use Up and Down to choose
+                                    options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to
+                                    select the option and exit the menu.</span></span>
+                            <div
+                                class="react-select-red__control react-select-red__control--is-focused react-select-red__control--menu-is-open css-1pahdxg-control">
+                                <div class="react-select-red__value-container css-1hwfws3">
+                                    <div class="Tabs_placeholder react-select-red__placeholder css-1wa3eu0-placeholder">партнеры</div><input
+                                        id="react-select-2-input" readonly="" tabindex="0" aria-autocomplete="list"
+                                        class="css-62g3xt-dummyInput" value="">
+                                </div>
+                                <div class="react-select-red__indicators css-1wy0on6"><span
+                                        class="react-select-red__indicator-separator css-1okebmr-indicatorSeparator"></span><svg
+                                        xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewBox="0 0 40 40">
+                                        <path fill="var(--white)"
+                                            d="M21.75 18.333H6.583c-.874 0-1.583.71-1.583 1.584v.166c0 .875.709 1.584 1.583 1.584H21.75c.874 0 1.583-.71 1.583-1.584v-.166c0-.875-.709-1.584-1.583-1.584zM26.75 26.667H6.583C5.71 26.667 5 27.376 5 28.25v.167C5 29.29 5.709 30 6.583 30H26.75c.874 0 1.583-.709 1.583-1.583v-.167c0-.874-.709-1.583-1.583-1.583zM33.417 10H6.583C5.71 10 5 10.709 5 11.583v.167c0 .874.709 1.583 1.583 1.583h26.834c.874 0 1.583-.709 1.583-1.583v-.167C35 10.71 34.291 10 33.417 10z">
+                                        </path>
+                                    </svg></div>
+                            </div>
+                            <div class="react-select-red__menu css-26l3qy-menu">
+                                <div class=" react-select-red__menu-list css-11unzgr">
+                                    <div class="Tabs_tab Tabs_selected react-select-red__option css-1n7v3ny-option"
+                                        id="react-select-2-option-0" tabindex="-1" data-tab-btn="partners">партнеры</div>
+                                    <div class="Tabs_tab react-select-red__option css-yt9ioa-option" id="react-select-2-option-1" tabindex="-1" data-tab-btn="friends">
+                                        друзья</div>
+                                    <div class="Tabs_tab react-select-red__option css-yt9ioa-option" id="react-select-2-option-2" tabindex="-1" data-tab-btn="special">
+                                        спецпредложения</div>
                                 </div>
                             </div>
                         </div>
+                    </div>
                     </div>
                     <div class="_active" data-tab="partners">
                         <div class="IndexPage_partners">
