--- a/pages/about.html
+++ b/pages/about.html
@@ -2972,12 +2972,65 @@
                     </div>
                     <div class="About_documentsContainer _active" data-tab="constituent">
                         <div class="DocumentCard_card">
-                            <div class="DocumentCard_header"><span
-                                    class="DocumentCard_chip DocumentCard_chipTertiary">2019</span></div>
-                            <h4 class="DocumentCard_title">Устав фонда</h4>
-                            <div class="DocumentCard_previewWrap"><img
-                                    src="https://storage.yandexcloud.net/pp-prod/Ustav_fff9b4cb14.webp" alt=""></div>
+                            <div>
+                                <div class="DocumentCard_header"><span
+                                        class="DocumentCard_chip DocumentCard_chipTertiary">2019</span>
+                                    </div>
+                                <h4 class="DocumentCard_title">Устав фонда</h4>
+                                <div class="DocumentCard_previewWrap"><img
+                                        src="https://storage.yandexcloud.net/pp-prod/Ustav_fff9b4cb14.webp" alt=""></div>
+                            </div>
+                            <div class="popup">
+                                <div class="react-responsive-modal-root" data-testid="root">
+                                    <div class="react-responsive-modal-overlay PopUpFull_overlay PopUp_container" data-testid="overlay" aria-hidden="true"
+                                        style="animation: 300ms ease 0s 1 normal none running react-responsive-modal-overlay-in;"></div>
+                                    <div class="react-responsive-modal-container react-responsive-modal-containerCenter"
+                                        data-testid="modal-container">
+                                        <div class="react-responsive-modal-modal PopUpFull_modal PopUp_modal" role="dialog" aria-modal="true"
+                                            data-testid="modal" tabindex="-1"
+                                            style="animation: 300ms ease 0s 1 normal none running react-responsive-modal-modal-in;">
+                                            <div class="Reports_viewerHeader">
+                                                <button class="Reports_btn Reports_btnDisabled"><svg xmlns="http://www.w3.org/2000/svg"
+                                                        width="11" height="20" fill="none" viewBox="0 0 11 18">
+                                                        <path d="M9 2L2 9L9 16" stroke="#000000" stroke-width="3" stroke-linecap="round"
+                                                            stroke-linejoin="round"></path>
+                                                    </svg></button><button class="Reports_btn"><svg xmlns="http://www.w3.org/2000/svg"
+                                                        width="11" height="20" fill="none" viewBox="0 0 11 18">
+                                                        <path d="M2 2L9 9L2 16" stroke="#000000" stroke-width="3" stroke-linecap="round"
+                                                            stroke-linejoin="round"></path>
+                                                    </svg></button><button class="Reports_btnClose react-responsive-modal-closeButton"><svg xmlns="http://www.w3.org/2000/svg"
+                                                        width="30" height="30" fill="none" viewBox="0 0 28 28">
+                                                        <path fill="#000000"
+                                                            d="M15.645 14l5.017-5.004a1.171 1.171 0 10-1.657-1.657L14 12.356 8.995 7.339a1.171 1.171 0 10-1.657 1.657L12.355 14l-5.017 5.005a1.167 1.167 0 000 1.657 1.166 1.166 0 001.657 0L14 15.646l5.005 5.017a1.166 1.166 0 001.657 0 1.169 1.169 0 000-1.657L15.645 14z">
+                                                        </path>
+                                                    </svg></button>
+                                            </div>
+                                            <div class="Reports_viewerWrap">
+                                                <div class="rpv-core__viewer rpv-core__viewer--light" data-testid="core__viewer"
+                                                    style="height: 100%; width: 100%;">
+                                                    <div data-testid="core__inner-container" style="height: 100%;">
+                                                        <div data-testid="core__inner-pages"
+                                                            class="rpv-core__inner-pages rpv-core__inner-pages--vertical"
+                                                            style="height: 100%; overflow: auto; position: relative;">
+                                                            <div style="position: relative; display: flex; flex-direction: column;">
+                                                                <img src="../../assets/report.jpg" alt="">
+                                                                <img src="../../assets/report.jpg" alt="">
+                                                                <img src="../../assets/report.jpg" alt="">
+                                                                <img src="../../assets/report.jpg" alt="">
+                                                                <img src="../../assets/report.jpg" alt="">
+                                                                <img src="../../assets/report.jpg" alt="">
+                                                                <img src="../../assets/report.jpg" alt="">
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                             </div>
                         </div>
+                        
                         <div class="DocumentCard_card">
                             <div class="DocumentCard_header"><span
                                     class="DocumentCard_chip DocumentCard_chipTertiary">2019</span></div>
