--- a/pages/form/form5.html
+++ b/pages/form/form5.html
@@ -42,8 +42,7 @@
 <body>
     <div id="__next">
         <div class="headroom-wrapper">
-            <div class="headroom headroom--unfixed headroom-disable-animation"
-                style="position: relative; top: 0px; left: 0px; right: 0px; z-index: 1000; transform: translate3d(0px, 0px, 0px);">
+            <div class="headroom">
                 <header class="Header_root " style="color: var(--white);">
                     <div class="Header_headerRoot">
                         <div style="display: flex; width: min-content;">
