add header js in all pages

--- a/pages/families/families.html
+++ b/pages/families/families.html
@@ -1007,5 +1007,6 @@
     </div>
     <script src="../../scripts/burger.js"></script>
     <script src="../../scripts/popup.js"></script>
+    <script src="../scripts/header.js"></script>
 </body>
 </html>
