--- a/pages/form/form1.html
+++ b/pages/form/form1.html
@@ -3388,6 +3388,7 @@
     <script src="../../scripts/form-radio.js"></script>
     <script src="../../scripts/form-checkbox.js"></script>
     <script src="../../scripts/form-select.js"></script>
+    <script src="../scripts/header.js"></script>
 </div>
 </body>
 </html>
