--- a/pages/form/form3.html
+++ b/pages/form/form3.html
@@ -1105,6 +1105,7 @@
     </footer>
     <script src="../../scripts/dropdown.js"></script>
     <script src="../../scripts/form-checkbox.js"></script>
+    <script src="../scripts/header.js"></script>
 </div>
 </body>
 </html>
