--- a/pages/404.html
+++ b/pages/404.html
@@ -226,5 +226,6 @@
         </footer>
     </div>
     <script src="../scripts/burger.js"></script>
+    <script src="../scripts/header.js"></script>
 </body>
 </html>
