--- a/pages/about.html
+++ b/pages/about.html
@@ -3272,6 +3272,7 @@
     <script src="../scripts/dialog-button.js"></script>
     <script src="../scripts/tabs.js"></script>
     <script src="../scripts/popup.js"></script>
+    <script src="../scripts/header.js"></script>
 </body>
 
 </html>
