--- a/pages/account/family.html
+++ b/pages/account/family.html
@@ -665,6 +665,7 @@
     <script src="../../scripts/burger.js"></script>
     <script src="../../scripts/dropdown.js"></script>
     <script src="../../scripts/account-sidebar.js"></script>
+    <script src="../scripts/header.js"></script>
 </body>
 
 </html>
