--- a/pages/cart.html
+++ b/pages/cart.html
@@ -755,5 +755,6 @@
     </div>
     <script src="../scripts/burger.js"></script>
     <script src="../scripts/popup.js"></script>
+    <script src="../scripts/header.js"></script>
 </body>
 </html>
