--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -274,5 +274,6 @@
     </footer>
    </div>
    <script src="../scripts/burger.js"></script>
+   <script src="../scripts/header.js"></script>
 </body>
 </html>
