--- a/pages/donate.html
+++ b/pages/donate.html
@@ -566,6 +566,7 @@
     <script src="../scripts/input.js"></script>
     <script src="../scripts/toggle-btns.js"></script>
     <script src="../scripts/checkbox.js"></script>
+    <script src="../scripts/header.js"></script>
 </body>
 
 </html>
