--- a/pages/families/family.html
+++ b/pages/families/family.html
@@ -950,6 +950,7 @@
     <script src="../../scripts/burger.js"></script>
     <script src="../../scripts/popup.js"></script>
     <script src="../../scripts/needs-tabs.js"></script>
+    <script src="../scripts/header.js"></script>
 </body>
 
 </html>
