--- a/pages/family.html
+++ b/pages/family.html
@@ -436,5 +436,6 @@
     <script src="../scripts/slider.js"></script>
     <script src="../scripts/burger.js"></script>
     <script src="../scripts/popup.js"></script>
+    <script src="../scripts/header.js"></script>
 </body>
 </html>
