--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -768,5 +768,6 @@
 </div>
 <script src="../../scripts/burger.js"></script>
 <script src="../../scripts/checkbox.js"></script>
+<script src="../scripts/header.js"></script>
 </body>
 </html>
