--- a/pages/feedback/reports.html
+++ b/pages/feedback/reports.html
@@ -664,6 +664,7 @@
         <script src="../../scripts/checkbox.js"></script>
         <script src="../../scripts/select.js"></script>
         <script src="../../scripts/popup.js"></script>
+        <script src="../scripts/header.js"></script>
 </body>
 
 </html>
