--- a/pages/form/form-finish.html
+++ b/pages/form/form-finish.html
@@ -375,6 +375,7 @@
         </div>
     </footer>
     <script src="../../scripts/dropdown.js"></script>
+    <script src="../scripts/header.js"></script>
 </div>
 </body>
 </html>
