--- a/pages/form/form10.html
+++ b/pages/form/form10.html
@@ -790,6 +790,7 @@
         </div>
     </footer>
     <script src="../../scripts/dropdown.js"></script>
+    <script src="../scripts/header.js"></script>
 </div>
 </body>
 </html>
