--- a/pages/form/form2.html
+++ b/pages/form/form2.html
@@ -1482,6 +1482,7 @@
     </footer>
     <script src="../../scripts/dropdown.js"></script>
     <script src="../../scripts/form-radio.js"></script>
+    <script src="../scripts/header.js"></script>
 </div>
 </body>
 </html>
