--- a/pages/form/form5.html
+++ b/pages/form/form5.html
@@ -1031,6 +1031,7 @@
     </footer>
     <script src="../../scripts/dropdown.js"></script>
     <script src="../../scripts/form-checkbox.js"></script>
+    <script src="../scripts/header.js"></script>
 </div>
 </body>
 </html>
