--- a/pages/form/form6.html
+++ b/pages/form/form6.html
@@ -936,6 +936,7 @@
         </div>
     </footer>
     <script src="../../scripts/dropdown.js"></script>
+    <script src="../scripts/header.js"></script>
 </div>
 </body>
 </html>
