--- a/pages/form/form7.html
+++ b/pages/form/form7.html
@@ -3882,6 +3882,7 @@
         </div>
     </footer>
     <script src="../../scripts/dropdown.js"></script>
+    <script src="../scripts/header.js"></script>
 </div>
 </body>
 </html>
