--- a/pages/form/form8.html
+++ b/pages/form/form8.html
@@ -821,6 +821,7 @@
         </div>
     </footer>
     <script src="../../scripts/dropdown.js"></script>
+    <script src="../scripts/header.js"></script>
 </div>
 </body>
 </html>
