--- a/pages/form/form9.html
+++ b/pages/form/form9.html
@@ -1205,6 +1205,7 @@
     </footer>
     <script src="../../scripts/dropdown.js"></script>
     <script src="../../scripts/form-radio.js"></script>
+    <script src="../scripts/header.js"></script>
 </div>
 </body>
 </html>
