--- a/pages/giver.html
+++ b/pages/giver.html
@@ -969,5 +969,6 @@
     <script src="../scripts/accordion.js"></script>
     <script src="../scripts/dialog-button.js"></script>
     <script src="../scripts/popup.js"></script>
+    <script src="../scripts/header.js"></script>
 </body>
 </html>
