--- a/pages/news-and-reports.html
+++ b/pages/news-and-reports.html
@@ -480,5 +480,6 @@
         </footer>
     </div>
     <script src="../scripts/burger.js"></script>
+    <script src="../scripts/header.js"></script>
 </body>
 </html>
