--- a/pages/account/family.html
+++ b/pages/account/family.html
@@ -50,8 +50,8 @@
 
 <body>
     <div id="__next">
-        <div class="headroom-wrapper">
-            <div class="headroom">
+        <div class="headroom-wrapper" style="height: 110px">
+            <div class="headroom headroom--disabled-animation">
                 <header class="Header_root " style="color: var(--white);">
                     <div class="Header_headerRoot">
                         <div style="display: flex; width: min-content;">
@@ -665,7 +665,7 @@
     <script src="../../scripts/burger.js"></script>
     <script src="../../scripts/dropdown.js"></script>
     <script src="../../scripts/account-sidebar.js"></script>
-    <script src="../scripts/header.js"></script>
+    <script src="../../scripts/header.js"></script>
 </body>
 
 </html>
