--- a/pages/form/form3.html
+++ b/pages/form/form3.html
@@ -41,8 +41,8 @@
 </head>
 <body>
     <div id="__next">
-        <div class="headroom-wrapper">
-            <div class="headroom">
+        <div class="headroom-wrapper" style="height: 110px">
+            <div class="headroom headroom--disabled-animation">
                 <header class="Header_root " style="color: var(--white);">
                     <div class="Header_headerRoot">
                         <div style="display: flex; width: min-content;">
@@ -1105,7 +1105,7 @@
     </footer>
     <script src="../../scripts/dropdown.js"></script>
     <script src="../../scripts/form-checkbox.js"></script>
-    <script src="../scripts/header.js"></script>
+    <script src="../../scripts/header.js"></script>
 </div>
 </body>
 </html>
