--- a/pages/families/family.html
+++ b/pages/families/family.html
@@ -63,8 +63,8 @@
 
 <body>
     <div id="__next">
-        <div class="headroom-wrapper">
-            <div class="headroom">
+        <div class="headroom-wrapper" style="height: 110px">
+            <div class="headroom headroom--disabled-animation">
                 <header class="Header_root " style="color: var(--white);">
                     <div class="Header_headerRoot">
                         <div style="display: flex; width: min-content;">
@@ -950,7 +950,7 @@
     <script src="../../scripts/burger.js"></script>
     <script src="../../scripts/popup.js"></script>
     <script src="../../scripts/needs-tabs.js"></script>
-    <script src="../scripts/header.js"></script>
+    <script src="../../scripts/header.js"></script>
 </body>
 
 </html>
