--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -54,8 +54,8 @@
 </head>
 <body>
     <div id="__next">
-        <div class="headroom-wrapper">
-            <div class="headroom">
+        <div class="headroom-wrapper" style="height: 110px">
+            <div class="headroom headroom--disabled-animation">
                 <header class="Header_root " style="color: var(--white);">
                     <div class="Header_headerRoot">
                         <div style="display: flex; width: min-content;">
@@ -768,6 +768,6 @@
 </div>
 <script src="../../scripts/burger.js"></script>
 <script src="../../scripts/checkbox.js"></script>
-<script src="../scripts/header.js"></script>
+<script src="../../scripts/header.js"></script>
 </body>
 </html>
