--- a/pages/feedback/reports.html
+++ b/pages/feedback/reports.html
@@ -56,8 +56,8 @@
 
 <body>
     <div id="__next">
-        <div class="headroom-wrapper">
-            <div class="headroom">
+        <div class="headroom-wrapper" style="height: 110px">
+            <div class="headroom headroom--disabled-animation">
                 <header class="Header_root " style="color: var(--white);">
                     <div class="Header_headerRoot">
                         <div style="display: flex; width: min-content;">
@@ -664,7 +664,7 @@
         <script src="../../scripts/checkbox.js"></script>
         <script src="../../scripts/select.js"></script>
         <script src="../../scripts/popup.js"></script>
-        <script src="../scripts/header.js"></script>
+        <script src="../../scripts/header.js"></script>
 </body>
 
 </html>
