background images in reports page

--- a/pages/feedback/reports.html
+++ b/pages/feedback/reports.html
@@ -447,8 +447,7 @@
                         <div class="Catalog_fullWidth"></div>
                         <div class="Catalog_lines">
                             <div class="Catalog_item">
-                                <div class="ReportCard_card"
-                                    style="background-image: url(&quot;/assets/bg_grid_0.png&quot;);">
+                                <div class="ReportCard_card bg-0">
                                     <div class="ReportCard_header"><span
                                             class="ReportCard_chip ReportCard_chipPrimary">Аудиторские
                                             заключения</span><span
@@ -509,8 +508,7 @@
                                  </div>
                             </div>
                             <div class="Catalog_item">
-                                <div class="ReportCard_card"
-                                    style="background-image: url(&quot;/assets/bg_grid_1.png&quot;);">
+                                <div class="ReportCard_card bg-1">
                                     <div class="ReportCard_header"><span
                                             class="ReportCard_chip ReportCard_chipPrimary">Аудиторские
                                             заключения</span><span
@@ -522,8 +520,7 @@
                                 </div>
                             </div>
                             <div class="Catalog_item">
-                                <div class="ReportCard_card"
-                                    style="background-image: url(&quot;/assets/bg_grid_2.png&quot;);">
+                                <div class="ReportCard_card bg-2">
                                     <div class="ReportCard_header"><span
                                             class="ReportCard_chip ReportCard_chipPrimary">Аудиторские
                                             заключения</span><span
@@ -535,8 +532,7 @@
                                 </div>
                             </div>
                             <div class="Catalog_item">
-                                <div class="ReportCard_card"
-                                    style="background-image: url(&quot;/assets/bg_grid_0.png&quot;);">
+                                <div class="ReportCard_card bg-0">
                                     <div class="ReportCard_header"><span
                                             class="ReportCard_chip ReportCard_chipPrimary">Аудиторские
                                             заключения</span><span
@@ -548,8 +544,7 @@
                                 </div>
                             </div>
                             <div class="Catalog_item">
-                                <div class="ReportCard_card"
-                                    style="background-image: url(&quot;/assets/bg_grid_1.png&quot;);">
+                                <div class="ReportCard_card bg-1">
                                     <div class="ReportCard_header"><span
                                             class="ReportCard_chip ReportCard_chipPrimary">Аудиторские
                                             заключения</span><span
@@ -561,8 +556,7 @@
                                 </div>
                             </div>
                             <div class="Catalog_item">
-                                <div class="ReportCard_card"
-                                    style="background-image: url(&quot;/assets/bg_grid_2.png&quot;);">
+                                <div class="ReportCard_card bg-2">
                                     <div class="ReportCard_header"><span
                                             class="ReportCard_chip ReportCard_chipPrimary">Аудиторские
                                             заключения</span><span
@@ -574,8 +568,7 @@
                                 </div>
                             </div>
                             <div class="Catalog_item">
-                                <div class="ReportCard_card"
-                                    style="background-image: url(&quot;/assets/bg_grid_0.png&quot;);">
+                                <div class="ReportCard_card bg-0">
                                     <div class="ReportCard_header"><span
                                             class="ReportCard_chip ReportCard_chipPrimary">Аудиторские
                                             заключения</span><span
@@ -587,8 +580,7 @@
                                 </div>
                             </div>
                             <div class="Catalog_item">
-                                <div class="ReportCard_card"
-                                    style="background-image: url(&quot;/assets/bg_grid_1.png&quot;);">
+                                <div class="ReportCard_card bg-1">
                                     <div class="ReportCard_header"><span
                                             class="ReportCard_chip ReportCard_chipPrimary">Аудиторские
                                             заключения</span><span
@@ -600,8 +592,7 @@
                                 </div>
                             </div>
                             <div class="Catalog_item">
-                                <div class="ReportCard_card"
-                                    style="background-image: url(&quot;/assets/bg_grid_2.png&quot;);">
+                                <div class="ReportCard_card bg-2">
                                     <div class="ReportCard_header"><span
                                             class="ReportCard_chip ReportCard_chipPrimary">Аудиторские
                                             заключения</span><span
