--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -306,15 +306,11 @@
                                         <input type="checkbox" name="" hidden="" value=""></div>
                                 </span><span class=""
                                     style="margin-left: 16px; user-select: none; font-family: var(--fontFamily); font-size: 14px; font-weight: 700; line-height: 20px; letter-spacing: 0px; text-transform: uppercase;">Семья</span></label>
-                        </div><button class=" Generic_iconRoot Generic_gray "
-                            style="margin-top: 44px; margin-left: 24px; margin-bottom: 70px;"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none" viewBox="0 0 40 40"
-                                class="Generic_icon">
-                                <path fill="var(--primary)" class="Generic_iconPath"
-                                    d="M33.833 22.383a1.667 1.667 0 00-2.083 1.084 11.9 11.9 0 01-11.45 8.2A11.833 11.833 0 018.333 20 11.833 11.833 0 0120.3 8.333a12.1 12.1 0 017.75 2.784l-3.617-.6a1.668 1.668 0 00-1.894 2.035 1.666 1.666 0 001.361 1.265l7.067 1.166h.283c.193 0 .385-.034.567-.1a.55.55 0 00.166-.1c.12-.044.232-.106.334-.183l.15-.183c0-.084.15-.15.216-.25.067-.1 0-.167.084-.234.046-.097.085-.197.116-.3l1.25-6.666a1.695 1.695 0 00-2.62-1.72 1.696 1.696 0 00-.713 1.086l-.45 2.417A15.35 15.35 0 0020.3 5 15.167 15.167 0 005 20a15.166 15.166 0 0015.3 15A15.2 15.2 0 0035 24.467a1.667 1.667 0 00-1.167-2.084z">
-                                </path>
-                            </svg>
-                            <p style="text-transform: unset; margin-left: 8px;">сбросить фильтры</p>
+                        </div><button class=" Generic_iconRoot Generic_gray Generic_resetBtn">
+                            <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M9.81302e-06 10.9211C0.0082132 4.88086 4.89454 2.13947e-07 10.9348 4.77974e-07C14.4348 6.30964e-07 17.552 1.64609 19.5535 4.20547L20.866 3.18008C21.0109 3.06797 21.2215 3.17188 21.2188 3.35234L21.1969 7.91875C21.1969 8.06094 21.0629 8.16484 20.9262 8.1293L16.4883 7.04922C16.4483 7.03947 16.4118 7.01862 16.3832 6.98908C16.3545 6.95953 16.3347 6.92249 16.3261 6.88222C16.3176 6.84194 16.3205 6.80007 16.3347 6.7614C16.3489 6.72274 16.3737 6.68887 16.4063 6.66367L17.8309 5.55078C17.6121 5.27188 17.3742 5.00391 17.1199 4.74961C16.3232 3.95013 15.3788 3.31307 14.3391 2.87383C13.2617 2.41719 12.116 2.1875 10.9348 2.1875C9.75352 2.1875 8.60782 2.41719 7.53048 2.87383C6.48868 3.31406 5.55353 3.9457 4.74962 4.74961C3.94571 5.55352 3.31407 6.48867 2.87384 7.53047C2.4172 8.61055 2.18751 9.75625 2.18751 10.9375C2.18751 12.1187 2.4172 13.2645 2.87384 14.3418C3.31407 15.3836 3.94571 16.3187 4.74962 17.1227C5.55352 17.9266 6.48868 18.5582 7.53048 18.9984C8.60782 19.4551 9.75352 19.6848 10.9348 19.6848C12.116 19.6848 13.2617 19.4551 14.3391 18.9984C15.3788 18.5592 16.3232 17.9221 17.1199 17.1227C17.325 16.9176 17.5164 16.7043 17.6996 16.4828C17.7357 16.4384 17.7878 16.4101 17.8446 16.4039C17.9015 16.3978 17.9584 16.4143 18.0031 16.45L19.384 17.5273C19.4797 17.6039 19.4961 17.7434 19.4195 17.8391C17.4125 20.3027 14.3582 21.875 10.9348 21.875C4.88907 21.875 -0.00819358 16.9695 9.81302e-06 10.9211Z" fill="#B4B4B4"/>
+                                </svg>
+                            <p>Сбросить фильтры</p>
                         </button>
                     </div>
                     <div class="Catalog_rightSide">
